users-service/users/src/main/java/com/example/users/errors/exceptions/userExceptions/WrongPassword.java
package com.example.users.errors.exceptions.userExceptions;

public class WrongPassword extends RuntimeException
{
    public WrongPassword(String message)
    {
        super(message);
    }
}
